# infoRoutine

./: .env.example  .gitignore  README.md  pyproject.toml  test_gemini.py  test_notion.py
.directives/: task.md
.docs/: Sources.xlsx
.github/workflows/: daily_briefing.yml
scripts/: create_sources.py  update_directives.py
src/: config.py  main.py
src/ai/: curator.py  synthesizer.py  token_budget.py
src/models/: schemas.py
src/notion/: client.py  publisher.py
src/scraper/: hybrid.py  prefilter.py
src/sources/: registry.py
tests/: test_registry.py  test_schemas.py  test_token_budget.py
